<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:round="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    tools:context="com.test.MainActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <include
            android:id="@+id/ll_title"
            layout="@layout/secken_title_bar" />

        <com.secken.sdk.ui.weight.RoundCornerImageView
            android:id="@+id/app_logo"
            android:layout_width="81dp"
            android:layout_height="81dp"
            android:layout_centerInParent="true"
            android:background="@drawable/default_app_logo"
            round:secken_isShowRoundCorner="true" />

        <TextView
            android:id="@+id/tv_appname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/app_logo"
            android:layout_marginTop="5dp"
            android:paddingLeft="5dp"
            android:text=""
            android:gravity="center"
            android:textColor="@color/secken_white"
            android:textSize="@dimen/secken_text_18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/ll_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/secken_content_bg"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp" >

            <!-- 描述 -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:textColor="@color/secken_text_color2"
                    android:textSize="@dimen/secken_text_16sp" />

                <TextView
                    android:id="@+id/tv_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:lines="2"
                    android:paddingLeft="10dp"
                    android:textColor="@color/secken_white"
                    android:textSize="@dimen/secken_text_16sp" />
            </LinearLayout>
            <!-- 用户名 -->

            <LinearLayout
                android:id="@+id/ll_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:textColor="@color/secken_text_color2"
                    android:textSize="@dimen/secken_text_16sp" />

                <TextView
                    android:id="@+id/tv_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:textColor="@color/secken_white"
                    android:textSize="@dimen/secken_text_16sp" />
            </LinearLayout>
            <!-- IP地址 -->

            <LinearLayout
                android:id="@+id/ll_ip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ip"
                    android:textColor="@color/secken_text_color2"
                    android:textSize="@dimen/secken_text_16sp" />

                <TextView
                    android:id="@+id/tv_ip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:textColor="@color/secken_white"
                    android:textSize="@dimen/secken_text_16sp" />
            </LinearLayout>
        </LinearLayout>
        
        <!-- 开启验证，拒绝验证 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_vertify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/secken_white"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/ok"
                android:textColor="@color/secken_text_color"
                android:textSize="@dimen/secken_text_18sp" />

            <TextView
                android:id="@+id/tv_vertify_refuse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/secken_white"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/refuse"
                android:textColor="@color/secken_text_color"
                android:textSize="@dimen/secken_text_18sp"
                android:visibility="visible" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>